feat: Enhance API with load testing capabilities and improve report handling - Add load testing functionality to script.sh - Update ProductHandler to return boolean for deletion - Refactor ReportHandler to include customer details in sales reports - Modify SalesByCustomerResponse to include order details and customer info - Update .gitignore to exclude SQLite database files - Add necessary package references in BugStore.Api.csproj

--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,5 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 src/BugStore.Api/app.db
+src/BugStore.Api/app.db-shm
+src/BugStore.Api/app.db-wal
