--- a/src/BugStore.Application/BugStore.Application.csproj
+++ b/src/BugStore.Application/BugStore.Application.csproj
@@ -11,4 +11,8 @@
         <ProjectReference Include="..\BugStore.Infrastructure\BugStore.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.2.0" />
+    </ItemGroup>
+
 </Project>
